[package]
name = "everythingformula"
version = "0.1.0"
authors = ["weflown <69599802+weflown@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.12"
ethereum-types = "0.9.2"
num = "0.3.1"
uint = "0.8"